--- a/public/js/views/users/show.html
+++ b/public/js/views/users/show.html
@@ -19,8 +19,15 @@
           </div>
         </div>
 
-        <p><a href="#" class="btn btn-primary" ng-click="users.deleteUser(users.user)" role="button">Delete User</a> <a href="#" class="btn btn-default" role="button">Edit User</a></p>
+        <a ui-sref="user-edit({ id: users.currentUser._id })">
+          <h4 class="media-heading">Edit</h4>
+        </a>
+        
+        <a href="#" ng-click="users.deleteUser(users.user)">
+          <h4 class="media-heading">Delete</h4>
+        </a>
 
+      
       </div>
     </div>
   </div>
