--- a/public/js/views/yelps/search.html
+++ b/public/js/views/yelps/search.html
@@ -1,31 +1,79 @@
-<ng-map default-style="true" center="51.5217,-0.0723" zoom="15">
-  <marker id='{{shop.id}}' position="{{shop.position}}"
-    ng-repeat="shop in vm.shops"
-    on-click="vm.showDetail(shop)">
-  </marker>
+<div class="jumbotron">
+  <h1>What are you looking for?</h1>
+  <div class="row">
+  <div class="col-lg-12">
+      <div class="input-group">
+        <input type="text" class="form-control" ng-model="vm.search.term" placeholder="Search for...">
+        <span class="input-group-btn">
+          <button ng-click="vm.searchFor()" class="btn btn-default" type="button">Find!</button>
+        </span>
+      </div><!-- /input-group -->
+    </div><!-- /.col-lg-6 -->
+  </div><!-- /.row -->
+  <p></p>
+  <div class="row">
+  <div class="col-lg-12">
+  <ng-map default-style="true" center="51.5217,-0.0723" zoom="15">
+    <marker id='{{shop.id}}' position="{{shop.position}}"
+      ng-repeat="shop in vm.shops"
+      on-click="vm.showDetail(shop)">
+    </marker>
 
-  <info-window id="foo-iw">
-    <div ng-non-bindable="">
-      id: {{vm.shop.id}}<br/>
-      name: {{vm.shop.name}}<br/>
-      Position 1: {{vm.shop.position}}<br/>
-      Position 2: {{anchor.getPosition()}}<br/>
-      Position 3: {{vm.map.markers[vm.shop.id].getPosition()}}<br/>
-      <a href="#" ng-click="vm.clicked()">Click Here</a>
-    </div>
-  </info-window>
-</ng-map>
+    <info-window id="foo-iw">
+      <div ng-non-bindable="">
 
-<button ng-click="vm.showDetail(e, vm.shop)">
-  show InfoWindow of the shop
-</button>
-<button ng-click="vm.hideDetail(e, vm.shop)">
-  Hide InfoWindow of the shop
-</button> 
-<button ng-click="vm.getYelpData(vm.all)">
-  Hit up Yelp
-</button>
+          <div class="media">
+            <div class="media-left media-middle">
+              <a href="">
+                <img class="media-object" ng-src="{{ vm.shop.img }}">
+              </a>
+            </div>
+            <div class="media-body">
+            <ul class="list-group">
+                  <li class="list-group-item">
+                    <h4 class="media-heading">{{vm.shop.name}}</h4>
+                  </li>              
+                  <li class="list-group-item">Rating: {{ vm.shop.rating }}</li>
+                  <li class="list-group-item">Address: {{vm.shop.address}}</li>
+                  <li class="list-group-item">Snippet: {{vm.shop.snippet}}</li>
+                </ul>
+            </div>
+          </div>
 
+          <div class="media">
+            <div class="media-left media-middle">
+              <a href="">
+                <img class="media-object" ng-src="{{ vm.shop.img }}">
+              </a>
+            </div>
+            <div class="media-body">
+            <ul class="list-group">
+                  <li class="list-group-item">
+                    <h4 class="media-heading">{{vm.shop.name}}</h4>
+                  </li>              
+                  <li class="list-group-item">Rating: {{ vm.shop.rating }}</li>
+                  <li class="list-group-item">Address: {{vm.shop.address}}</li>
+                  <li class="list-group-item">Snippet: {{vm.shop.snippet}}</li>
+                </ul>
+            </div>
+          </div>
 
- <input type="text" ng-model="vm.search.term" placeholder="Type Something">
- <input type="button" value="Create!" ng-click="vm.searchFor()">
+          <!-- <div id="siteNotice"></div>
+            <h2 id="firstHeading" class="firstHeading">{{vm.shop.name}}</h2>
+          
+          <div id="bodyContent">
+            Position 1: {{vm.shop.position}}<br/>
+            Position 2: {{anchor.getPosition()}}<br/>
+            Position 3: {{vm.map.markers[vm.shop.id].getPosition()}}<br/>
+            <a href="#" ng-click="vm.clicked()">Click Here</a>
+          </div> -->
+      </div>
+    </info-window>
+  </ng-map>
+
+ 
+     </div><!-- /.col-lg-6 -->
+   </div><!-- /.row -->
+</div>
+
+<!-- id: {{vm.shop.id}} -->
