--- a/public/js/views/comments/show.html
+++ b/public/js/views/comments/show.html
@@ -6,6 +6,7 @@
     <div class="caption">
       <h3>{{ comments.comment.title | uppercase }}</h3>
       <p>{{ comments.comment.description }}</p>
+      <p>{{ comments.comment.yelpID }}</p>
       <p>{{ comments.comment.rating }}</p>
       <br>
 
