--- a/public/js/views/home.html
+++ b/public/js/views/home.html
@@ -1,1 +1,62 @@
 <h1>Home</h1>
+<<!-- div ng-controller="ModalDemoCtrl">
+    <script type="text/ng-template" id="myModalContent.html">
+    <section ng-controller="CommentsController as comments">
+        <div class="modal-header">
+            <h3 class="modal-title">Comment</h3>
+        </div>
+        <div class="modal-body">
+
+        <form id="edit" name="comments.loginForm" ng-submit="comments.createComment(); ok();" novalidate>
+          <div class="alert alert-danger" role="alert" ng-show="(!!comments.error && comments.loginForm.$submitted)">{{ comments.error }}</div>
+
+          <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" class="form-control" id="email" placeholder="Please put a title" name="title" ng-model="comments.comment.title" required>
+          </div>
+
+          <div class="alert alert-danger" role="alert" ng-messages="comments.loginForm['title'].$error" ng-show="(comments.loginForm.$submitted && comments.loginForm['title'].$invalid)">
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <span class="sr-only">Error:</span>
+            <span ng-message="required">Title is required.</span>
+          </div>
+
+          <div class="form-group">
+            <label for="password">Description</label>
+            <input type="text" class="form-control" id="description" name="description"  placeholder="description" ng-model="comments.comment.description" required>
+          </div>
+
+          <div class="alert alert-danger" role="alert" ng-messages="comments.loginForm['description'].$error" ng-show="(comments.loginForm.$submitted && comments.loginForm['description'].$invalid)">
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <span class="sr-only">Error:</span>
+            <span ng-message="required">Description is required.</span>
+          </div>
+
+          <div class="form-group">
+            <label for="password">Rating</label>
+            <input type="text" class="form-control" id="rating" name="rating"  placeholder="rating" ng-model="comments.comment.rating" required>
+          </div>
+
+          <div class="alert alert-danger" role="alert" ng-messages="comments.loginForm['rating'].$error" ng-show="(comments.loginForm.$submitted && comments.loginForm['rating'].$invalid)">
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <span class="sr-only">Error:</span>
+            <span ng-message="required">Rating is required.</span>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-primary">Create</button>
+            <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+            </div>
+          </form>
+
+        </div>
+
+              
+      </section>
+    </script>
+
+    <button type="button" class="btn btn-default" ng-click="open()">Open me!</button>
+    <button type="button" class="btn btn-default" ng-click="open('lg')">Large modal</button>
+    <button type="button" class="btn btn-default" ng-click="open('sm')">Small modal</button>
+    <button type="button" class="btn btn-default" ng-click="toggleAnimation()">Toggle Animation ({{ animationsEnabled }})</button>
+    <div ng-show="selected">Selection from a modal: {{ selected }}</div>
+</div> -->
