--- a/public/js/views/yelps/search.html
+++ b/public/js/views/yelps/search.html
@@ -1,4 +1,6 @@
-<div class="jumbotron">
+
+
+<div class="jumbotron" ng-controller="mainController as vm">
   <h1>What are you looking for?</h1>
   <div class="row">
   <div class="col-lg-12">
@@ -14,11 +16,13 @@
   <div class="row">
   <div class="col-lg-12">
   <ng-map default-style="true" center="51.5217,-0.0723" zoom="15">
+  <section ng-controller="CommentsController as comments">
+
     <marker id='{{shop.id}}' position="{{shop.position}}"
       ng-repeat="shop in vm.shops"
-      on-click="vm.showDetail(shop)">
+      on-click="vm.showDetail(shop);">
     </marker>
-
+  </section>
     <info-window id="foo-iw">
       <div ng-non-bindable="">
 
@@ -29,44 +33,95 @@
               </a>
             </div>
             <div class="media-body">
-            <ul class="list-group">
-                  <li class="list-group-item">
-                    <h4 class="media-heading">{{vm.shop.name}}</h4>
-                  </li>              
-                  <li class="list-group-item">Rating: {{ vm.shop.rating }}</li>
-                  <li class="list-group-item">Address: {{vm.shop.address}}</li>
-                  <li class="list-group-item">Snippet: {{vm.shop.snippet}}</li>
-                </ul>
+              <ul class="list-group">
+                    <li class="list-group-item">
+                      <h4 class="media-heading">{{vm.shop.name}}</h4>
+                    </li>              
+                    <li class="list-group-item">Rating: {{ vm.shop.rating }}</li>
+                    <li class="list-group-item">Address: {{vm.shop.address}}</li>
+                    <li class="list-group-item">Snippet: {{vm.shop.snippet}}</li>
+                    <br>                  
+              </ul>
+
             </div>
           </div>
+
 
           <div class="media">
-            <div class="media-left media-middle">
-              <a href="">
-                <img class="media-object" ng-src="{{ vm.shop.img }}">
-              </a>
-            </div>
-            <div class="media-body">
-            <ul class="list-group">
-                  <li class="list-group-item">
-                    <h4 class="media-heading">{{vm.shop.name}}</h4>
-                  </li>              
-                  <li class="list-group-item">Rating: {{ vm.shop.rating }}</li>
-                  <li class="list-group-item">Address: {{vm.shop.address}}</li>
-                  <li class="list-group-item">Snippet: {{vm.shop.snippet}}</li>
-                </ul>
-            </div>
+              
+              <div class="media-body">
+              <h4>User Reviews</h4>
+              <ul class="list-group" ng-repeat="review in vm.sortedShops">
+                  <li class="list-group-item">Title: {{ review.title }}</li>
+                  <li class="list-group-item">Description: {{ review.description }}</li>
+                  <li class="list-group-item">Rating: {{ review.rating }}</li>
+              </ul>
+              </div>
           </div>
 
-          <!-- <div id="siteNotice"></div>
-            <h2 id="firstHeading" class="firstHeading">{{vm.shop.name}}</h2>
-          
-          <div id="bodyContent">
-            Position 1: {{vm.shop.position}}<br/>
-            Position 2: {{anchor.getPosition()}}<br/>
-            Position 3: {{vm.map.markers[vm.shop.id].getPosition()}}<br/>
-            <a href="#" ng-click="vm.clicked()">Click Here</a>
-          </div> -->
+          <div ng-controller="CommentsController as comments">
+            <button type="button" class="btn btn-default pull-right" ng-click="open(vm.shop.id); comments.sortedComments()">Comment</button>
+          </div>
+
+          <div>
+              <script type="text/ng-template" id="myModalContent.html">
+              <section ng-controller="CommentsController as comments">
+                  <div class="modal-header">
+                      <h3 class="modal-title">Comment</h3>
+                  </div>
+                  <div class="modal-body">
+
+
+                  <form id="edit" name="comments.loginForm" ng-submit="comments.createComment(vm.shop.id); ok();" novalidate>
+                    <div class="alert alert-danger" role="alert" ng-show="(!!comments.error && comments.loginForm.$submitted)">{{ comments.error }}</div>
+
+                    <div class="form-group">
+                      <label for="title">Title</label>
+                      <input type="text" class="form-control" id="email" placeholder="Please put a title" name="title" ng-model="comments.comment.title" required>
+                    </div>
+
+                    <div class="alert alert-danger" role="alert" ng-messages="comments.loginForm['title'].$error" ng-show="(comments.loginForm.$submitted && comments.loginForm['title'].$invalid)">
+                      <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                      <span class="sr-only">Error:</span>
+                      <span ng-message="required">Title is required.</span>
+                    </div>
+
+                    <div class="form-group">
+                      <label for="password">Description</label>
+                      <input type="text" class="form-control" id="description" name="description"  placeholder="description" ng-model="comments.comment.description" required>
+                    </div>
+
+                    <div class="alert alert-danger" role="alert" ng-messages="comments.loginForm['description'].$error" ng-show="(comments.loginForm.$submitted && comments.loginForm['description'].$invalid)">
+                      <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                      <span class="sr-only">Error:</span>
+                      <span ng-message="required">Description is required.</span>
+                    </div>
+
+                    <div class="form-group">
+                      <label for="password">Rating</label>
+                      <input type="text" class="form-control" id="rating" name="rating"  placeholder="rating" ng-model="comments.comment.rating" required>
+                    </div>
+
+                    <div class="alert alert-danger" role="alert" ng-messages="comments.loginForm['rating'].$error" ng-show="(comments.loginForm.$submitted && comments.loginForm['rating'].$invalid)">
+                      <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                      <span class="sr-only">Error:</span>
+                      <span ng-message="required">Rating is required.</span>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="submit" class="btn btn-primary">Create</button>
+                      <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+                      </div>
+                    </form>
+
+                  </div>
+
+                        
+                </section>
+              </script>
+
+          </div>
+
+        
       </div>
     </info-window>
   </ng-map>
@@ -75,5 +130,8 @@
      </div><!-- /.col-lg-6 -->
    </div><!-- /.row -->
 </div>
+<div>  
+</div>
+
 
 <!-- id: {{vm.shop.id}} -->
